--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <section class="hero">
     <div class="sedan wrapper">
-         <img class="img" src="/images/icon-sedans.svg">
+         <img class="img" src="images/icon-sedans.svg">
         <h1 class="heading">Sedans</h1>
         <p class="dis"> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
             or on your next road trip.
         </p>
         <button class="btn">Learn More</button>
-    </div><div class="suv wrapper"> <img class="img" src="/images/icon-suvs.svg">
+    </div><div class="suv wrapper"> <img class="img" src="images/icon-suvs.svg">
         <h1 class="heading">SUVs</h1>
         <p class="dis"> 
             Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -28,7 +28,7 @@
         </p>
         <button class="btn">Learn More</button>
     </div>
-    <div class="luxury wrapper"> <img class="img" src="/images/icon-luxury.svg">
+    <div class="luxury wrapper"> <img class="img" src="images/icon-luxury.svg">
         <h1 class="heading">Luxury</h1>
         <p class="dis"> 
             Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
